<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity" >

   
    <Switch 
        android:id="@+id/bt_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>
    
    <TextView 
        android:id="@+id/myBtDevName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@id/bt_toggle"
        android:text="@string/bt_device_name"/>
    
    <Button 
        android:id="@+id/bt_pick_device"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_toggle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/pick_remote_device"
        android:onClick="pickDevice"/>
        
    <View
        android:id="@+id/div1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
		android:layout_below="@id/bt_pick_device"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray" />
             
    <Button 
	    android:id="@+id/send"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:text="@string/send"
	    android:onClick="sendMsg"/>
             	
    <EditText 
	    android:id="@+id/message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_toLeftOf="@id/send"
	    android:layout_alignBottom="@id/send"
	    android:inputType="text"
	    android:hint="@string/type_your_message_here"
	    />
    
    <View
        android:id="@+id/div2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
		android:layout_above="@id/send"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray" />
    
    <TextView 
	    android:id="@+id/status"
	    android:layout_below="@id/div1"
	    android:layout_alignParentLeft="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="8dp"
	    android:text="@string/status"
	    />
    
    <!-- 
    <TextView 
	    android:id="@+id/txtView1"
	    android:layout_below="@id/status"
	    android:layout_alignParentLeft="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="8dp"
	    android:text="@string/message_appears_here"
	    />  -->
    
    <ListView 
	    android:id="@+id/listChat"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
      	android:layout_below="@id/status"
      	android:layout_above="@id/div2"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:layout_alignParentLeft="true"/>
    
        
</RelativeLayout>
